# pluralcache

./: .gitignore  Cargo.toml  README.md
src/: main.rs  models.rs
src/implementations/: controller.rs  in_memory_cache.rs  mod.rs  origin_api.rs
src/traits/: mod.rs  notifier.rs  provider.rs
